# graphing-tui

./: README.md  pyproject.toml
src/graphing_tui/: __init__.py  tui.py  tui.tcss
